welcome.lessons.welcome.bat.bool2.ShareDigit.scala.error
shareDigit:6: error: type mismatch;
 found   : Unit
 required: Boolean
  if (c==e || c==f || d==e || d==f) {
  ^